--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-leaflet": "^3.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-toastify": "^7.0.4",
     "sass": "^1.35.2",
     "web-vitals": "^1.1.2"
   },
